<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regEmailText"
            android:layout_alignParentStart="false"
            android:text="@string/reg_1_email"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_marginTop="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_1_email_hint"
            android:id="@+id/regEmailHint"
            android:layout_below="@+id/regEmailText"
            android:layout_alignStart="@+id/regEmailText"
            android:layout_marginTop="2dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/regEmailEdit"
            android:layout_below="@+id/regEmailHint"
            android:layout_alignStart="@+id/regEmailHint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regPassText"
            android:text="@string/reg_1_pass"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/regEmailEdit"
            android:layout_alignParentEnd="false"
            android:layout_alignLeft="@+id/regEmailText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_1_pass_hint"
            android:id="@+id/regPassHint"
            android:layout_below="@+id/regPassText"
            android:layout_alignStart="@+id/regPassText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/regPassEdit"
            android:layout_below="@+id/regPassHint"
            android:layout_alignStart="@+id/regPassHint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regLoginText"
            android:text="@string/reg_1_login"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/regPassEdit"
            android:layout_alignStart="@+id/regPassEdit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_1_pass_hint"
            android:id="@+id/regLoginHint"
            android:layout_below="@+id/regLoginText"
            android:layout_alignStart="@+id/regLoginText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_1_hint"
            android:id="@+id/regTopicHint"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_1_registration"
            android:id="@+id/regRegBut"
            android:layout_above="@+id/regTopicHint"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/editText3"
            android:layout_below="@+id/regLoginHint"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</RelativeLayout>