<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/companyLogo"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/slider" />

    <ru.timuruktus.waroll.ExtendedDefaultClasses.ExtendedSliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:foreground="@drawable/top_join_alpha"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/join_email"
        android:id="@+id/joinEmailText"
        android:layout_below="@+id/companyLogo"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="20dp"
        android:background="#fcfcfc" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/joinEmailEdit"
        android:layout_below="@+id/joinEmailText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/join_pass"
        android:id="@+id/joinPassText"
        android:layout_below="@+id/joinEmailEdit"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="20dp"
        android:background="#fcfcfc" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/joinPassEdit"
        android:layout_below="@+id/joinPassText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/join_join"
        android:id="@+id/joinJoinBut"
        android:layout_below="@+id/joinPassEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/join_reg"
        android:id="@+id/joinRegBut"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:background="#e3e3e3"
        android:layout_marginBottom="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_forgot_pass"
        android:id="@+id/joinForgottenPass"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />

</RelativeLayout>